--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,17 +11,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-wrapper">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid nav-wrapper">
             <a class="navbar-brand" href="#">
-                <img src="logo.svg" alt="Logo" width="100" height="60">
+                <img src="logo.svg" class="brand-logo" alt="Logo">
             </a>
 
             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse l-10" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
