--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 /* for navbar */
 .navbar {
   margin: 0px;
@@ -21,10 +25,15 @@
 .nav-item {
   margin-left: 3rem;
 }
+.nav-item a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .brand-logo {
+  object-fit: cover;
   border: 0dp;
   padding: 0dp;
-  /* border: 2px solid white; */
+  border: 2px dashed white;
   border-radius: 0px;
   width: 150px;
   height: 90px;
@@ -40,7 +49,71 @@
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAHMAAABkCAMAAACCTv/3AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////5ubmueBsSwAAAAJ0Uk5T/wDltzBKAAAAPklEQVR42uzYQQ0AAAgDseHfNC4IyVoD912WAACUm3uampqampqamq+aAAD+IVtTU1NTU1NT0z8EAFBsBRgAX+kR+Qam138AAAAASUVORK5CYII=);
 }
 
-/* main css */
+.st-line {
+  margin: 2px;
+  height: 1px;
+  background-color: #3b3b3b;
+}
+
+/* main styling */
 .heading {
   background-color: rebeccapurple;
+}
+
+/* footer styling*/
+.social-wrapper {
+  align-items: center;
+  border: 2px dashed white;
+  display: flex;
+  width: fit-content;
+}
+.img-handle {
+  margin: 4px;
+  object-fit: contain;
+}
+.social-platform {
+  cursor: pointer;
+  display: block;
+  display: block;
+  background-color: white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+#footer {
+  position: fixed;
+  width: 100%;
+  left: 0px;
+  bottom: 0px;
+}
+.footer-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background: #3a3a3a;
+}
+.footer-wrapper {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background: #3a3a3a;
+  justify-content: center;
+}
+.footer-row {
+  padding: 0px;
+  margin: 0px auto;
+  margin-top: 10px;
+  width: 60%;
+  /* border: 2px dashed white; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.footer-row p {
+  cursor: pointer;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
 }
