--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,51 +11,14 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid nav-wrapper">
-            <a class="navbar-brand" href="#">
-                <img src="logo.svg" class="brand-logo" alt="Logo">
-            </a>
+    {{>header}}
 
-            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse l-10" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Coronavirus</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">India</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Foreign</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Categories</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">About Us</a>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-
-    </nav>
-
-    <h1 class="heading">
-        Heading
-    </h1>
 
     <div class="container">
         {{{body}}}
     </div>
 
+    {{>footers}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
