--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,36 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Book Face</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid nav-wrapper">
+        <a class="navbar-brand" href="#">
+            <img src="logo.svg" class="brand-logo" alt="Logo">
+        </a>
+
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse l-10" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-light" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light active" href="#">Coronavirus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#">India</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#">Foreign</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#">About Us</a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
 </nav>
+<hr class="st-line">
