added top cards

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,7 +33,7 @@
   object-fit: cover;
   border: 0dp;
   padding: 0dp;
-  border: 2px dashed white;
+  /* border: 2px dashed white; */
   border-radius: 0px;
   width: 150px;
   height: 90px;
