--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,32 @@
-<div class="container">
-
+<div class="container-fluid videos-wrapper">
+    <div class="text-wrapper">
+        <h1>Latest</h1>
+        <h1>News</h1>
+    </div>
+    <div class="inner-video-wrapper">
+        <div class="video-element card selected">
+            <img src="https://cdn4.buysellads.net/uu/1/3386/1525189943-38523.png" class="card-img-top">
+            <div class="card-body">
+                <p>Donald trump lost the elections.</p>
+            </div>
+        </div>
+        <div class="video-element card">
+            <img src="https://cdn4.buysellads.net/uu/1/3386/1525189943-38523.png" class="card-img-top">
+            <div class="card-body">
+                <p>Donald trump lost the elections.</p>
+            </div>
+        </div>
+        <div class="video-element card">
+            <img src="https://cdn4.buysellads.net/uu/1/3386/1525189943-38523.png" class="card-img-top">
+            <div class="card-body">
+                <p>Donald trump lost the elections.</p>
+            </div>
+        </div>
+        <div class="video-element card">
+            <img src="https://cdn4.buysellads.net/uu/1/3386/1525189943-38523.png" class="card-img-top">
+            <div class="card-body">
+                <p>Donald trump lost the elections.</p>
+            </div>
+        </div>
+    </div>
 </div>
