--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/{{style}}" />
     <title>Khabariya</title>
 </head>
 
 <body>
     {{>header}}
 
-
-    <div class="container">
-        {{{body}}}
-    </div>
+    {{{body}}}
 
     {{>footers}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
