--- a/views/home.hbs
+++ b/views/home.hbs
@@ -30,3 +30,23 @@
         </div>
     </div>
 </div>
+
+{{!-- main news heading card --}}
+<div class="container top-new-wrapper">
+    <img src="https://akm-img-a-in.tosshub.com/aajtak/images/story/202101/ajinkya_rahane_and_tim_paine_-1-sixteen_nine.jpg?size=1200:675"
+        class="top-news-image">
+    <div class="news-div">
+        <h3>IND vs AUS: टीम इंडिया गाबा में इतिहास रच पाएगी? ब्रिस्बेन में 33 साल से हारे नहीं कंगारू</h3>
+        <p>दिल्ली सरकार ने चिकन के व्यापार और आयात पर लगे प्रतिबंध को हटाने का आदेश दिया है. इसके अलावा पोल्ट्री मार्केट
+            खोलने के
+            भी निर्देश दिए गए हैं. बर्ड फ्ल...न के व्यापार और आयात पर लगे प्रतिबंध को न के व्यापार और आयात पर लगे
+            प्रतिबंध
+            ल्ली सरकार ने चिकन के व्यापार और आयात पर लगे प्रतिबंध को हटाने का आदेश दिया है. इसके अलावा पोल्ट्री मार्केट
+            खोलने के
+            भी निर्देश दिए गए हैं. बर्ड फ्ल...न के व्यापार और आयात पर लगे प्रतिबंध को न के व्यापार और आयात पर लगे
+            प्रतिबंध
+            को</p>
+        <button>Read more</button>
+    </div>
+
+</div>
