--- a/views/home.hbs
+++ b/views/home.hbs
@@ -56,31 +56,11 @@
 
 
 {{!-- horizontal list of news --}}
-<div class="container horz-video-news-container">
-    {{!-- each news-video card --}}
-    <div class="video-news">
-        <img
-            src="https://akm-img-a-in.tosshub.com/aajtak/images/story/202101/jasprit_bumrah-1-sixteen_nine.jpg?size=1200:675">
-        <p>दिल्ली सरकार ने चिकन के व्यापार और आयात पर लगे प्रतिबंध को हटाने का आदेश दिया है. इसके अलावा पोल्ट्री मार्केट
-            खोलने के</p>
-    </div>
-    <div class="video-news">
-        <img
-            src="https://akm-img-a-in.tosshub.com/aajtak/images/story/202101/ajinkya_rahane_and_tim_paine_-1-sixteen_nine.jpg?size=1200:675">
-        <p>दिल्ली सरकार ने चिकन के व्यापार और आयात पर लगे प्रतिबंध को हटाने का आदेश दिया है. इसके अलावा पोल्ट्री मार्केट
-            खोलने के</p>
-    </div>
-    <div class="video-news">
-        <img
-            src="https://akm-img-a-in.tosshub.com/aajtak/images/story/202101/ajinkya_rahane_and_tim_paine_-1-sixteen_nine.jpg?size=1200:675">
-        <p>दिल्ली सरकार ने चिकन के व्यापार और आयात पर लगे प्रतिबंध को हटाने का आदेश दिया है. इसके अलावा पोल्ट्री मार्केट
-            खोलने के</p>
-    </div>
-</div>
+{{>videoNews news=videoNews}}
 
 
 {{!-- vertical list of news --}}
 <div class="container">
     <h3>Uttar pradesh khabar</h3>
-
+    {{>simpleNews news=ListOfSimpleNews}}
 </div>
