--- a/views/home.hbs
+++ b/views/home.hbs
@@ -62,3 +62,19 @@
     <h3>Uttar pradesh khabar</h3>
     {{>simpleNews news=ListOfSimpleNews}}
 </div>
+
+{{!-- trending news --}}
+<div class="container">
+    <h3>Trending</h3>
+    <div class="trending-news-contanier">
+        <img
+            src="https://adventure.com/wp-content/uploads/2020/03/Pink-tuk-tuk-Horton-Plains-National-Park-Sri-Lanka-Photo-credit-eddy-billard-JOoOPt8tTPY-unsplash-1920x1080.jpg">
+        <p class="news-text">They found 100 kg gold at kolar gold Mine</p>
+    </div>
+    <div class="trending-news-contanier">
+        <img
+            src="https://adventure.com/wp-content/uploads/2020/03/Pink-tuk-tuk-Horton-Plains-National-Park-Sri-Lanka-Photo-credit-eddy-billard-JOoOPt8tTPY-unsplash-1920x1080.jpg">
+        <p class="news-text">They found 100 kg gold at kolar gold Mine</p>
+    </div>
+
+</div>
