--- a/views/partials/footers.hbs
+++ b/views/partials/footers.hbs
@@ -1,17 +1,17 @@
-<footer id="footer">
+<footer id="footer" class="footer mt-auto">
     <div class="footer-header">
         <img src="logo.svg" class="brand-logo" alt="Logo">
         <div class="social-wrapper">
             <a class="social-platform" href="https://github.com/Dalakoti07/" target="_blank"><img alt=""
-                    src="youtube.svg" class="img-handle" /></a>
+                    src="youtube.png" class="img-handle" /></a>
             <a class="social-platform" href="https://www.linkedin.com/in/saurabh-d-990930145/" target="_blank"><img
-                    alt="" src="youtube.svg" class="img-handle" /></a>
+                    alt="" src="linkedin.png" class="img-handle" /></a>
             <a class="social-platform" href="https://stackoverflow.com/users/10386258/dalakoti07" target="_blank"><img
-                    alt="" src="youtube.svg" class="img-handle" /></a>
+                    alt="" src="instagram.png" class="img-handle" /></a>
             <a class="social-platform" href="https://twitter.com/SaurabhDalakot5" target="_blank"><img alt=""
-                    src="youtube.svg" class="img-handle" /></a>
+                    src="facebook.png" class="img-handle" /></a>
             <a class="social-platform" href="https://twitter.com/SaurabhDalakot5" target="_blank"><img alt=""
-                    src="youtube.svg" class="img-handle" /></a>
+                    src="twitter.png" class="img-handle" /></a>
         </div>
     </div>
 
