--- a/public/css/home.css
+++ b/public/css/home.css
@@ -150,7 +150,7 @@
 .trending-news-contanier {
   position: relative;
   text-align: center;
-  color: white;
+  color: black;
   height: 400px;
   margin-bottom: 20px;
 }
