--- a/public/css/index.css
+++ b/public/css/index.css
@@ -63,29 +63,23 @@
 /* footer styling*/
 .social-wrapper {
   align-items: center;
-  border: 2px dashed white;
+  /* border: 2px dashed white; */
   display: flex;
   width: fit-content;
 }
 .img-handle {
-  margin: 4px;
   object-fit: contain;
 }
 .social-platform {
   cursor: pointer;
-  display: block;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   margin-left: 10px;
-}
-#footer {
-  position: fixed;
-  width: 100%;
-  left: 0px;
-  bottom: 0px;
 }
 .footer-header {
   display: flex;
