more responsiveness added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
 </div>
 
 {{!-- main news heading card --}}
-<div class="container top-new-wrapper">
+<div class="container top-news-wrapper">
     <img src="https://akm-img-a-in.tosshub.com/aajtak/images/story/202101/ajinkya_rahane_and_tim_paine_-1-sixteen_nine.jpg?size=1200:675"
         class="top-news-image">
     <div class="news-div">
