--- a/public/css/home.css
+++ b/public/css/home.css
@@ -72,7 +72,7 @@
 }
 
 /* for main news card */
-.top-new-wrapper {
+.top-news-wrapper {
   align-items: center;
   display: flex;
   margin-top: 100px;
@@ -104,6 +104,23 @@
   border-radius: 8px;
   background-color: sandybrown;
   color: white;
+}
+
+@media screen and (max-width: 800px) {
+  .top-news-wrapper {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .top-news-image {
+    width: 90%;
+  }
+  .news-div {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .grey-wrapper {
@@ -138,10 +155,24 @@
   margin-top: 8px;
   border-radius: 8px;
   width: 100%;
-  height: 200px;
+  height: 90%;
+  overflow: hidden;
+  object-fit: cover;
 }
 .video-news p {
   overflow: hidden;
+}
+
+@media screen and (max-width: 800px) {
+  .horz-video-news-container {
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .video-news img {
+    width: 80%;
+  }
 }
 
 /* simple news styling */
