news detail page added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -46,7 +46,9 @@
             भी निर्देश दिए गए हैं. बर्ड फ्ल...न के व्यापार और आयात पर लगे प्रतिबंध को न के व्यापार और आयात पर लगे
             प्रतिबंध
             को</p>
-        <button>Read more</button>
+        <a href="/news/details/indiaVsAus">
+            <button>Read more</button>
+        </a>
     </div>
 </div>
 <div class="container grey-wrapper">
