--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid nav-wrapper">
         <a class="navbar-brand" href="#">
-            <img src="logo.svg" class="brand-logo" alt="Logo">
+            <img src="/logo.svg" class="brand-logo" alt="Logo">
         </a>
 
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -22,8 +22,17 @@
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">Foreign</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Categories</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link text-light dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Categories
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">America</a>
+                        <a class="dropdown-item" href="#">China</a>
+                        <a class="dropdown-item" href="#">Cricket</a>
+                        <a class="dropdown-item" href="#">Nation</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">About Us</a>
