--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container-fluid nav-wrapper">
         <a class="navbar-brand" href="#">
             <img src="/logo.svg" class="brand-logo" alt="Logo">
@@ -11,10 +11,10 @@
         <div class="collapse navbar-collapse l-10" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-light" aria-current="page" href="#">Home</a>
+                    <a class="nav-link text-light active" aria-current="page" href="#">होम</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light active" href="#">Coronavirus</a>
+                    <a class="nav-link text-light" href="#">Coronavirus</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">India</a>
@@ -23,15 +23,18 @@
                     <a class="nav-link text-light" href="#">Foreign</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-light dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Categories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">America</a>
-                        <a class="dropdown-item" href="#">China</a>
-                        <a class="dropdown-item" href="#">Cricket</a>
-                        <a class="dropdown-item" href="#">Nation</a>
+                        <a class="dropdown-item" href="#">जिला जवार</a>
+                        <a class="dropdown-item" href="#">पढ़ाई खिलाई</a>
+                        <a class="dropdown-item" href="#">खेल- सिनेमा</a>
+                        <a class="dropdown-item" href="#">नेतागिरी</a>
+                        <a class="dropdown-item" href="#">बतकही</a>
+                        <a class="dropdown-item" href="#">देश दुनिया</a>
+                        <a class="dropdown-item" href="#">वीडियो</a>
                     </div>
                 </li>
                 <li class="nav-item">
