--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,7 +9,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse l-10" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav navbar-wrapper">
                 <li class="nav-item">
                     <a class="nav-link text-light active" aria-current="page" href="#">होम</a>
                 </li>
