--- a/public/css/home.css
+++ b/public/css/home.css
@@ -147,8 +147,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 250px;
-  height: 250px;
+  width: 30%;
+  height: 350px;
 }
 
 .video-news img {
@@ -161,6 +161,10 @@
 }
 .video-news p {
   overflow: hidden;
+  /* required for overflow */
+  text-overflow: ellipsis;
+  padding-bottom: 1rem;
+  height: 3rem;
 }
 
 @media screen and (max-width: 800px) {
@@ -170,8 +174,10 @@
     align-items: center;
     justify-content: center;
   }
-  .video-news img {
-    width: 80%;
+
+  .video-news {
+    width: 90%;
+    height: 250px;
   }
 }
 
